<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ProtectRelay_WIP1" Id="{27db9449-8e0b-40e4-bcaa-5784da79196b}">
    <Declaration><![CDATA[///////////
// Structure For I35. Main Operating Data to be saved ( ex: OPC ) .  
//////////
TYPE ProtectRelay_WIP1 :
STRUCT
	// I35 Data measures
	MesData					: ProtectRelay ; (**)


	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>